--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,5 +1,4 @@
 body {
-    font-family: 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #ddd;
@@ -9,30 +8,21 @@ body {
 .header {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
-    padding: 10px 20px;
+    padding: 10px 10px;
     justify-content: center;
 }
 
-.header-utilities {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
 .header__inner {
-    max-width: 1000px;
     margin: 0 auto;
     height: 60px;
     display: flex;
     align-items: center;
-    justify-content: center;
     position: relative;
 }
 
 .header__logo {
     position: absolute;
-    left: 2%;
-    transform: translateX(-50%);
+    left: 10px;
     font-size: 25px;
     font-weight: bold;
     text-decoration: none;
@@ -43,7 +33,6 @@ body {
     position: absolute;
     right: 1px;
     top: 50%;
-    transform: translateY(-50%);
     margin: 0;
     padding: 0;
 }
