--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,8 +1,37 @@
+.page-title {
+    font-size: 24px;
+    margin: 30px 30px;
+}
+
+.container {
+    display: flex;
+    gap: 20px;
+}
+
+.search-form {
+    flex-direction: column;
+        align-items: center;
+    /* text-align: center; */
+    width: 25%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.search-btn {
+    margin: 20px auto 0;
+    padding: 10px 30px;
+    cursor: pointer;
+    color: #000;
+    border: none;
+    background-color: yellow;
+    border-radius: 5px;
+}
+
 .wrapper {
     display: flex;
-    justify-content: space-between;
     width: 80%;
-    margin: 0 auto;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 img {
@@ -30,4 +59,39 @@ img {
 .name,
 .price {
     font-size: 15px;
+}
+
+.pagination-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 0;
+    gap: 0;
+    padding: 0;
+}
+
+.page-item {
+    display: inline-block;
+    margin-right: 8px;
+}
+
+.page-link {
+    border-radius: 50%;
+    display: inline-block;
+    padding: 10px 10px;
+    color: #000;
+    border: 1px solid #e9eaea;
+    text-decoration: none;
+}
+
+.page-item.active .page-link {
+    background-color: yellow;
+    color: white;
 }
