--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -6,11 +6,21 @@
 .container {
     display: flex;
     gap: 20px;
+    align-items: flex-start;
 }
 
+.create-btn {
+    margin: 20px auto 0;
+    padding: 10px 30px;
+    cursor: pointer;
+                    color: #000;
+                    border: none;
+                    background-color: orange;
+                    border-radius: 5px;
+}
 .search-form {
     flex-direction: column;
-        align-items: center;
+    align-items: center;
     /* text-align: center; */
     width: 25%;
     padding: 20px;
@@ -29,7 +39,7 @@
 
 .wrapper {
     display: flex;
-    width: 80%;
+    width: 70%;
     gap: 20px;
     flex-wrap: wrap;
 }
@@ -63,9 +73,8 @@ img {
 
 .pagination-wrapper {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+    justify-content: center;
+    margin: 20px 0 20px 0;
 }
 
 .pagination {
