--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -49,7 +49,13 @@ textarea {
     display: none;
 }
 
-label.checkbox {
+.season-checkboxes {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    /* 要素間のスペースを空ける */ }
+
+.checkbox {
     display: flex;
     align-items: center;
     margin-right: 20px;
